--- a/src/style.scss
+++ b/src/style.scss
@@ -2,6 +2,7 @@
 @import "./styles/utils/variables";
 @import "./styles/utils/mixins";
 @import "./styles/utils/normalize.scss";
-@import "./styles/blocks/header";
 @import "./styles/blocks/nav";
 @import "./styles/blocks/menu.scss";
+@import "./styles/blocks/industries.scss";
+@import "./styles/blocks/news.scss";
