--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -48,41 +48,24 @@
     }
   }
 
-  &__drop {
-    padding: 0;
-    color: $color-black;
-    font-weight: 600;
-    font-size: 16px;
-    line-height: 150%;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    cursor: pointer;
-
-    &--head {
-      display: flex;
+  &__dropdown {
+    &-head {
+      color: $color-black;
+      font-weight: 600;
+      font-size: 16px;
+      line-height: 150%;
 
       &:hover {
         color: $color-red;
       }
-
-      &-arrow {
-        padding-left: 10px;
-      }
     }
 
     &-item {
-      position: absolute;
-      opacity: 0;
-      transition: $transition-time;
-    }
+      display: none;
 
-    &-item.opened {
-      opacity: 1;
-      position: static;
-      padding-top: 15px;
+      &.opened {
+        display: block;
+      }
     }
   }
 }
