--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -4,4 +4,5 @@ $color-red: #e00034;
 $color-grey: #969798;
 $color-blue: #2db3ff;
 $color-green: #219653;
+$color-header: #1f1d2a;
 $transition-time: 0.3s;
