--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -8,6 +8,12 @@
   transition: $transition-time;
   transform: translateX(100%);
 
+  @include onDesktop {
+    position: static;
+    height: 100%;
+    transform: none;
+  }
+
   &:target {
     transform: translateX(0%);
   }
@@ -18,6 +24,10 @@
     align-items: center;
     padding: 20px;
     margin-bottom: 70px;
+
+    @include onDesktop {
+      display: none;
+    }
   }
 
   &__nav {
@@ -25,16 +35,34 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    @include onDesktop {
+      display: block;
+    }
   }
 
   &__list {
     padding: 0;
     margin: 0;
+
+    @include onDesktop {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
   }
 
   &__item {
     text-align: center;
     margin-bottom: 20px;
+
+    @include onDesktop {
+      margin: 0;
+
+      &:not(:first-child) {
+        margin-left: 50px;
+      }
+    }
   }
 
   &__link {
@@ -49,6 +77,8 @@
   }
 
   &__dropdown {
+    position: relative;
+
     &-head {
       color: $color-black;
       font-weight: 600;
@@ -57,14 +87,30 @@
 
       &:hover {
         color: $color-red;
+        cursor: pointer;
       }
     }
 
     &-item {
       display: none;
+      font-style: 14px;
+      color: $color-grey;
 
       &.opened {
         display: block;
+
+        @include onDesktop {
+          position: absolute;
+          left: 50%;
+          transform: translateX(-50%);
+        }
+      }
+    }
+
+    &-text {
+      &:hover {
+        cursor: pointer;
+        color: $color-black;
       }
     }
   }
