--- a/src/styles/utils/fonts.scss
+++ b/src/styles/utils/fonts.scss
@@ -1,1 +1,2 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Exo+2&display=swap');
