industry block added

--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -5,4 +5,5 @@ $color-grey: #969798;
 $color-blue: #2db3ff;
 $color-green: #219653;
 $color-header: #1f1d2a;
+$color-light-grey: #d2d2d2;
 $transition-time: 0.3s;
