--- a/src/styles/blocks/industries.scss
+++ b/src/styles/blocks/industries.scss
@@ -1,4 +1,10 @@
 .industries {
+  @include onDesktop {
+    margin: 0 180px;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+  }
+
   &__head {
     color: $color-header;
     font-weight: 500;
@@ -8,6 +14,13 @@
     font-size: 18px;
     font-family: "Exo 2", sans-serif;
 
+    @include onDesktop {
+      font-size: 30px;
+      text-align: center;
+      margin: 0;
+      grid-column: 6 / 7;
+    }
+
     &::after {
       content: "";
       display: block;
@@ -15,11 +28,21 @@
       width: 75vw;
       height: 2px;
       margin-top: 14px;
+
+      @include onDesktop {
+        width: 90px;
+        margin-top: 10px;
+        margin: 10px auto 62px;
+      }
     }
   }
 
   &__list {
     padding: 0;
+    grid-column: 1 / 4;
+    margin: 0;
+    background:#fff;
+    background: linear-gradient(to right, #fff, #85858520) ;
   }
 
   &__item {
@@ -27,23 +50,38 @@
     font-weight: 400;
     font-family: "Exo 2", sans-serif;
     padding: 18px 0 18px 36px;
-    border-top: 1px solid rgba(150, 151, 152, 0.6);
+    border-top: 1px solid $color-light-grey;
     transition: $transition-time;
-    
-    &:last-child {
-      border-bottom: 1px solid $color-grey;
-    }
 
-    &:hover {
-      color: $color-red;
-      cursor: pointer;
+    @include onDesktop {
+      font-size: 24px;
+      border-bottom: 1px solid $color-light-grey;
+      border-right: 1px solid $color-light-grey;
+      border-top: none;
+      padding: 24px 24px 24px 56p;
+
+      &.active {
+        color: $color-red;
+        background-color: $color-white;
+        border-right: none;
+      }
     }
   }
 
-  &__dropdown {
-    &.selected {
-      color: $color-red;
+  &:last-child {
+    border-bottom: 1px solid $color-light-grey;
+
+    @include onDesktop {
+      border-bottom: 1px solid $color-light-grey;
     }
+  }
+
+  &:hover {
+    color: $color-red;
+    cursor: pointer;
+  }
+
+  &__dropdown {
 
     &-text {
       font-family: "Exo 2", sans-serif;
@@ -53,7 +91,52 @@
 
       &.selected {
         display: block;
+
+        @include onDesktop {
+          display: none;
+        }
       }
+    }
+  }
+
+  &__content {
+    display: none;
+
+    @include onDesktop {
+      display: block;
+      grid-column: 4 / 12;
+      border: 1px solid $color-light-grey;
+      border-left: none;
+    }
+  }
+
+  &__card {
+    position: absolute;
+    opacity: 0;
+    transition: $transition-time;
+
+    &.active {
+      opacity: 1;
+    }
+
+    &-header {
+      color: $color-red;
+      font-weight: 500;
+      font-size: 48px;
+      font-family: "Exo 2", sans-serif;
+      margin: 44px 0 30px 80px;
+    }
+
+    &-text {
+      font-family: "Exo 2", sans-serif;
+      color: $color-black;
+      font-size: 24px;
+      margin: 0 0 60px 80px;
+      max-width: 60%;
+    }
+
+    &-arrow {
+      margin-left: 80px;
     }
   }
 }
