--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -71,6 +71,10 @@
     font-size: 16px;
     line-height: 150%;
 
+    @include onDesktop {
+      font-size: 18px;
+    }
+
     &:hover {
       color: $color-red;
     }
@@ -84,6 +88,10 @@
       font-weight: 600;
       font-size: 16px;
       line-height: 150%;
+
+      @include onDesktop {
+        font-size: 18px;
+      }
 
       &:hover {
         color: $color-red;
