--- a/src/styles/blocks/news.scss
+++ b/src/styles/blocks/news.scss
@@ -2,9 +2,15 @@
   &__header {
     margin: 40px 16px;
     color: $color-header;
-    font-family: "Exo 2", sans-serif;
     font-weight: 500;
     font-size: 18px;
+    font-family: "Exo 2", sans-serif;
+
+    @include onDesktop {
+      font-size: 30px;
+      text-align: center;
+      margin: 0;
+    }
 
     &::after {
       content: "";
@@ -13,6 +19,12 @@
       width: 75vw;
       height: 2px;
       margin-top: 14px;
+
+      @include onDesktop {
+        width: 90px;
+        margin-top: 10px;
+        margin: 10px auto 62px;
+      }
     }
   }
 }
