--- a/src/styles/blocks/form.scss
+++ b/src/styles/blocks/form.scss
@@ -4,6 +4,11 @@
   top: 50%;
   transform: translate(-50%, -50%);
   z-index: 3;
+  display: none;
+
+  &.formActive {
+    display: block;
+  }
   
   @include onMobile {
     display: none;
@@ -21,6 +26,12 @@
     position: absolute;
     right: 30px;
     top: 30px;
+    transition: $transition-time;
+
+    &:hover {
+      cursor: pointer;
+      transform: rotate(90deg);
+    }
   }
 
   &__head {
@@ -94,9 +105,12 @@
     font-weight: 500;
     font-family: "Exo 2", sans-serif;
     font-size: 18px;
+    border: none;
+    transition: $transition-time;
 
     &:hover {
       cursor: pointer;
+      transform: scale(1.1);
     }
   }
 }
