--- a/src/styles/blocks/form.scss
+++ b/src/styles/blocks/form.scss
@@ -1,13 +1,17 @@
 .form {
   position: fixed;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
+  width: 100vw;
+  height: 100vh;
+  left: 0;
+  top: 0;
   z-index: 3;
   display: none;
 
   &.formActive {
-    display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background:rgba(0, 0, 0, 0.5);
   }
   
   @include onMobile {
@@ -20,6 +24,12 @@
     background-color: $color-white;
     border: 1px solid black;
     position: relative;
+
+    @include onMobile {
+      width: 90%;
+      height: 94%;
+      // margin: 20px 16px;
+    }
   }
 
   &__close {
@@ -32,6 +42,11 @@
       cursor: pointer;
       transform: rotate(90deg);
     }
+
+    @include onMobile {
+      right: 20px;
+      top: 20px;
+    }
   }
 
   &__head {
@@ -40,6 +55,10 @@
     font-family: "Exo 2", sans-serif;
     font-weight: 500;
     text-align: center;
+
+    @include onMobile {
+      margin-bottom: 20px;
+    }
   }
 
   &__form {
@@ -47,6 +66,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    @include onMobile {
+      margin: 20px;
+    }
   }
 
   &__name {
@@ -58,6 +81,10 @@
     font-weight: 300;
     font-size: 20px;
     margin-bottom: 30px;
+
+    @include onMobile {
+      margin-bottom: 20px;
+    }
 
     &::placeholder {
       color: rgb(0, 0, 0, 0.6);
@@ -75,6 +102,10 @@
     font-weight: 300;
     font-size: 20px;
     margin-bottom: 60px;
+
+    @include onMobile {
+      margin-bottom: 50px;
+    }
 
     &::placeholder {
       color: rgb(0, 0, 0, 0.6);
@@ -94,6 +125,11 @@
     font-size: 20px;
     font-family: "Open Sans", sans-serif;
     border: 1px solid $color-light-grey;
+
+    @include onMobile {
+      height: 250px;
+      margin-bottom: 20px;
+    }
   }
 
   &__button {
@@ -108,9 +144,17 @@
     border: none;
     transition: $transition-time;
 
+    @include onMobile {
+      width: 100%;
+    }
+
     &:hover {
       cursor: pointer;
       transform: scale(1.1);
+
+      @include onMobile {
+        transform: none;
+      }
     }
   }
 }
