--- a/src/styles/blocks/news.scss
+++ b/src/styles/blocks/news.scss
@@ -27,4 +27,152 @@
       }
     }
   }
+
+  &__slider {
+    display: flex;
+    overflow-x: auto;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
+  }
+
+  &__card-news {
+    border: 1px solid black;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    min-width: 365px;
+    background-image: url("./images/Pictures/News_card_news.png");
+
+    @include onMobile {
+      min-width: 225px;
+    }
+
+    &-head {
+      width: 110px;
+      display: inline-block;
+      font-family: "Exo 2", sans-serif;
+      font-size: 18px;
+      font-weight: 400;
+      background-color: $color-red;
+      color: $color-white;
+      padding: 8px 8px;
+      margin: 20px 0 80px;
+
+      @include onMobile {
+        font-size: 12px;
+      }
+    }
+
+    &-name {
+      color: $color-white;
+      margin: 0 0 0 8px;
+      font-family: "Exo 2", sans-serif;
+      line-height: 20px;
+    }
+
+    &-date {
+      color: $color-white;
+      margin: 0 0 0 8px;
+      font-family: "Exo 2", sans-serif;
+
+      &::after {
+        content: "";
+        display: block;
+        height: 2px;
+        width: 200%;
+        background-color: $color-red;
+        margin: 8px 0 40px;
+      }
+    }
+
+    &-text {
+      text-align: center;
+      color: $color-white;
+      font-family: "Exo 2", sans-serif;
+      font-size: 14px;
+      margin-bottom: 30px;
+      align-self: center;
+    }
+
+    &-form {
+      align-self: center;
+      margin-bottom: 60px;
+      transition: $transition-time;
+
+      &:hover {
+        cursor: pointer;
+        transform: scale(1.2);
+      }
+    }
+  }
+
+  &__card-web {
+    border: 1px solid black;
+    background-color: darkgray;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    min-width: 365px;
+    background-image: url("./images/Pictures/News_card_web.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+
+    @include onMobile {
+      min-width: 225px;
+    }
+
+    &-head {
+      width: 110px;
+      display: inline-block;
+      font-family: "Exo 2", sans-serif;
+      font-size: 18px;
+      font-weight: 400;
+      background-color: $color-blue;
+      color: $color-white;
+      padding: 8px 8px;
+      margin: 20px 0 100px;
+
+      @include onMobile {
+        font-size: 12px;
+      }
+    }
+
+    &-date {
+      color: $color-white;
+      margin: 0 0 0 8px;
+      font-family: "Exo 2", sans-serif;
+
+      &::after {
+        content: "";
+        display: block;
+        height: 2px;
+        width: 200%;
+        background-color: $color-blue;
+        margin: 8px 0 40px;
+      }
+    }
+
+    &-text {
+      text-align: center;
+      color: $color-white;
+      font-family: "Exo 2", sans-serif;
+      font-size: 14px;
+      margin-bottom: 30px;
+      align-self: center;
+    }
+
+    &-form {
+      align-self: center;
+      margin-bottom: 60px;
+      transition: $transition-time;
+
+      &:hover {
+        cursor: pointer;
+        transform: scale(1.2);
+      }
+    }
+  }
 }
